2nd slider background image restored

--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -41,7 +41,8 @@
         </div>
 
         <!-- Single Slide -->
-        <div class="single-welcome-slide bg-img bg-overlay jarallax slideimage">
+        <div class="single-welcome-slide bg-img bg-overlay jarallax"
+            style="background-image: url(static/main_page/img/bg-img/coming_soon.jpg);">
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
                     <!-- Welcome Text -->
