talks front page

--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -30,7 +30,7 @@
     <div id="preloader">
         <div class="loader"></div>
     </div>
-    <header class="header-area">
+    <header class="header-area"  style="background-color: black;">
         <div class="classy-nav-container breakpoint-off">
             <div class="container">
                 <!-- Classy Menu -->
