--- a/main_page/templates/main_page/talks.html
+++ b/main_page/templates/main_page/talks.html
@@ -1,147 +1,80 @@
 {% extends "main_page/base.html" %}
 {% load static %}
 {% load socialaccount %}
+
+{% block style %}
+<link href="{% static 'main_page/css/LineIcons.css' %}" rel="stylesheet">
+{%endblock%}
+
 {% block body %}
-<br>
-<br>
-<br>
-<br>
-<section  style="margin: 0;">
-         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100"  style="height: max-content;"   src="{% static 'main_page/img/core_team/Ashish_finance.jpeg' %}" alt="First slide" class="img-responsive">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" style="height: max-content;" src="{% static 'main_page/img/core_team/Ashish_finance.jpeg' %}" alt="Second slide" class="img-responsive">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100"  style="height: max-content;"  src="{% static 'main_page/img/core_team/Ashish_finance.jpeg' %}" alt="Third slide" class="img-responsive">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-    </section>
-    <section id="testimonial" class="testimonial-area">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <div class="section-title text-center pb-20">
-                        <h3 class="title">Lecture Series</h3>
-                        <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
-                    </div> <!-- section title -->
-                </div>
-            </div> <!-- row -->
-            
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="row testimonial-active">
-                        <div class="col-lg-4">
-                            <div class="single-testimonial mt-30 mb-30 text-center">
-                                <div class="testimonial-image">
-                                    <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}" alt="Author">
-                                </div>
-                                <div class="testimonial-content">
-                                    <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed! Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
-                                    <h6 class="author-name">Isabela Moreira</h6>
-                                    <span class="sub-title">CEO, GrayGrids</span>
-                                    <h6 style="padding: 4px;">20-20-20</h6>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
-                            </div> <!-- single testimonial -->
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="single-testimonial mt-30 mb-30 text-center">
-                                <div class="testimonial-image">
-                                    <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}" alt="Author">
-                                </div>
-                                <div class="testimonial-content">
-                                    <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed! Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
-                                    <h6 class="author-name">Fiona</h6>
-                                    <span class="sub-title">Lead Designer, UIdeck</span>
-                                    <h6 style="padding: 4px;">20-20-20</h6>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
-                            </div> <!-- single testimonial -->
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="single-testimonial mt-30 mb-30 text-center">
-                                <div class="testimonial-image">
-                                    <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}" alt="Author">
-                                </div>
-                                <div class="testimonial-content">
-                                    <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed! Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
-                                    <h6 class="author-name">Elon Musk</h6>
-                                    <span class="sub-title">CEO, SpaceX</span>
-                                    <h6 style="padding: 4px;" >20-20-20</h6>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
-                            </div> <!-- single testimonial -->
-                        </div>
-                    </div> <!-- row -->
-                </div>
-            </div> <!-- row -->
-            <br>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="row testimonial-active">
-                        <div class="col-lg-4">
-                            <div class="single-testimonial mt-30 mb-30 text-center">
-                                <div class="testimonial-image">
-                                    <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}" alt="Author">
-                                </div>
-                                <div class="testimonial-content">
-                                    <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed! Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
-                                    <h6 class="author-name">Isabela Moreira</h6>
-                                    <span class="sub-title">CEO, GrayGrids</span>
-                                    <h6 style="padding: 4px;">20-20-20</h6>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
-                            </div> <!-- single testimonial -->
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="single-testimonial mt-30 mb-30 text-center">
-                                <div class="testimonial-image">
-                                    <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}" alt="Author">
-                                </div>
-                                <div class="testimonial-content">
-                                    <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed! Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
-                                    <h6 class="author-name">Fiona</h6>
-                                    <span class="sub-title">Lead Designer, UIdeck</span>
-                                    <h6 style="padding: 4px;">20-20-20</h6>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
-                            </div> <!-- single testimonial -->
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="single-testimonial mt-30 mb-30 text-center">
-                                <div class="testimonial-image">
-                                    <img src="{% static 'main_page/img/core_team/Rahul_OC.jpg' %}" alt="Author">
-                                </div>
-                                <div class="testimonial-content">
-                                    <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed! Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
-                                    <h6 class="author-name">Elon Musk</h6>
-                                    <span class="sub-title">CEO, SpaceX</span>
-                                    <h6 style="padding: 4px;" >20-20-20</h6>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
-                            </div> <!-- single testimonial -->
-                        </div>
-                    </div> <!-- row -->
-                </div>
-            </div>
-        </div> <!-- container -->
-    </section>
+<section>
+    <div id="home" class="slider-area">
+        <div class="bd-example" style="margin-top: 11px;">
+            <div id="carouselOne" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselOne" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselOne" data-slide-to="1"></li>
+                    <li data-target="#carouselOne" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item bg_cover active"
+                        style="background-image: url(../../static/main_page/img/bg-img/college_bg.jpg)">
+                        <div class="carousel-caption">
+                            <div class="container">
+                                <div class="row justify-content-center">
+                                    <div class="col-xl-6 col-lg-7 col-sm-10">
+                                        <h2 class="carousel-title">Refreshing Design & Easy to Customize</h2>
+                                        <h4 style="color: #5e7af8;">Refreshing Design & Easy to Customize</h4>
+                                        <a href="{% url 'main_page:events'%}" class="btn confer-btn-white">Explore</a>
+                                        <ul class="carousel-btn rounded-buttons">
+
+                                        </ul>
+                                    </div>
+                                </div> <!-- row -->
+                            </div> <!-- container -->
+                        </div> <!-- carousel caption -->
+                    </div> <!-- carousel-item -->
+
+                    <div class="carousel-item bg_cover" style="background-image: url(assets/images/slider-2.jpg)">
+                        <div class="carousel-caption">
+                            <div class="container">
+                                <div class="row justify-content-center">
+                                    <div class="col-xl-6 col-lg-7 col-sm-10">
+                                        <h2 class="carousel-title">Based on Latest Bootstrap & HTML5</h2>
+                                        <ul class="carousel-btn rounded-buttons">
+
+                                        </ul>
+                                    </div>
+                                </div> <!-- row -->
+                            </div> <!-- container -->
+                        </div> <!-- carousel caption -->
+                    </div> <!-- carousel-item -->
+
+                    <div class="carousel-item bg_cover" style="background-image: url(assets/images/slider-3.jpg)">
+                        <div class="carousel-caption">
+                            <div class="container">
+                                <div class="row justify-content-center">
+                                    <div class="col-xl-6 col-lg-7 col-sm-10">
+                                        <h2 class="carousel-title">Multi-purpose Landing Page Template</h2>
+                                        <ul class="carousel-btn rounded-buttons">
+
+                                        </ul>
+                                    </div>
+                                </div> <!-- row -->
+                            </div> <!-- container -->
+                        </div> <!-- carousel caption -->
+                    </div> <!-- carousel-item -->
+                </div> <!-- carousel-inner -->
+
+                <a class="carousel-control-prev" href="#carouselOne" role="button" data-slide="prev">
+                    <i class="lni-arrow-left-circle"></i>
+                </a>
+
+                <a class="carousel-control-next" href="#carouselOne" role="button" data-slide="next">
+                    <i class="lni-arrow-right-circle"></i>
+                </a>
+            </div> <!-- carousel -->
+        </div> <!-- bd-example -->
+    </div>
+</section>
 {% endblock %}
