--- a/techconnect/templates/techconnect/base.html
+++ b/techconnect/templates/techconnect/base.html
@@ -81,6 +81,7 @@
                                     <li><a href="{% url 'techconnect:about' %}">About</a></li>
                                     <li><a href="{% url 'techconnect:contact' %}">Contacts</a></li>
                                     <li><a href="{% url 'techconnect:centers' %}">Cities</a></li>
+                                    <li><a href="https://internship.advitiya.in">Internship and Benefits</a></li>
                                 </ul>
                             </div>
                             <!-- Nav End -->
