--- a/main_page/templates/main_page/talk1.html
+++ b/main_page/templates/main_page/talk1.html
@@ -1,8 +1,54 @@
 {% extends "main_page/base.html" %}
 {% load static %}
 {% load socialaccount %}
+
+{% block style %}
+<link href="{% static 'main_page/css/the-big-picture.css' %}" rel="stylesheet">
+
+{%endblock%}
+
 {% block body %}
 
+<!-- Social Links -->
+<!-- <nav class="social-nav">
+    <ul>
+        <li><a href="#"><img src="{% static 'main_page/img/icon-facebook.png' %}" /></a></li>
+        <li><a href="#"><img src="{% static 'main_page/img/icon-twitter.png' %}" /></a></li>
+        <li><a href="#"><img src="{% static 'main_page/img/icon-google.png' %}" /></a></li>
+        <li><a href="#"><img src="{% static 'main_page/img/icon-linkedin.png' %}" /></a></li>
+    </ul>
+</nav> -->
 
+<!-- Page Content -->
+<div class="body">
+<section class="content">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 post-details-content" style="background-color: rgba(255, 255, 255, 0.7);">
+                <h1 class="space-10">About the person</h1>
+                <p>He blah blah blah He blah blah blah He blah blah blah He blah blah blah He blah blah 
+                    blah He blah blah blah He blah blah blahHe blah blah blah He blah blah blah He blah blah blah He blah blah 
+                    blah He blah blah blah He blah blah blah</p>
+                    <h1>The Big Picture</h1>
+                    <p>He blah blah blah He blah blah blah He blah blah blah He blah blah blah He blah blah 
+                        blah He blah blah blah He blah blah blah</p>
+            </div>
+        </div>
+    </div>
+</section>
+</div>
 
 {% endblock %}
+
+{% block footer %}
+{% endblock %}
+
+{% block scripts %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+{%endblock%}
