--- a/main_page/templates/main_page/talk1.html
+++ b/main_page/templates/main_page/talk1.html
@@ -20,28 +20,37 @@
 </nav> -->
 
 <!-- Page Content -->
-<div class="body">
-<section class="content">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-4 post-details-content" style="background-color: rgba(255, 255, 255, 0.7);">
-                <h1 class="space-10">About the person</h1>
-                <p>He blah blah blah He blah blah blah He blah blah blah He blah blah blah He blah blah 
-                    blah He blah blah blah He blah blah blahHe blah blah blah He blah blah blah He blah blah blah He blah blah 
-                    blah He blah blah blah He blah blah blah</p>
-                    <h1>The Big Picture</h1>
-                    <p>He blah blah blah He blah blah blah He blah blah blah He blah blah blah He blah blah 
-                        blah He blah blah blah He blah blah blah</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<section>
+        
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+                <img class="img-left" src="http://assets.barcroftmedia.com.s3-website-eu-west-1.amazonaws.com/assets/images/recent-images-11.jpg"/>
             </div>
+                <div class= "col-md-6"><h3 style="justify-content: center;">Experience &nbsp </h3>
+                <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+                <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+                <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+                <br>
+                <h6 class="author-name">Isabela Moreira</h6>
+                <span class="sub-title">CEO, GrayGrids</span>
+                <h6 style="padding: 4px;">20-20-20</h6>
+            </div>
+        
+         </div>
         </div>
     </div>
 </section>
-</div>
+
 
 {% endblock %}
 
-{% block footer %}
-{% endblock %}
 
 {% block scripts %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
