--- a/main_page/templates/main_page/talks.html
+++ b/main_page/templates/main_page/talks.html
@@ -50,18 +50,18 @@
                     </div> -->
                     {% for person in people %}
                         <div class="row carousel-item">
-                            <div class="bg_cover col-md-6"
+                            <div class="carousel-item bg_cover active col-12 col-md-6"
                                 style="background-image: url(../../static/main_page/img/HarinderSikka8.jpg);"></div>
-                            <div class="col-md-6">
+                            <div class="col-6 col-md-6 hero">
                                 <div class="container">
-                                    <div class="row justify-content-center">
+                                    <div class="row justify-content-center" style="padding-top: 20px;">
                                         <div class="col-xl-6 col-lg-7 col-sm-10">
                                             <h2 class="carousel-title">{{person.name}}</h2>
                                             <ul class="carousel-btn rounded-buttons">
                                                 <li> {{person.para1}}</li>
                                                 <li> {{person.para2}}</li>
                                                 <a href="{% url 'main_page:talk1'%}"
-                                                    class="btn confer-btn-white">Explore</a>
+                                                    class="btn confer-btn-white" >Explore</a>
                                             </ul>
                                         </div>
                                     </div>
