--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -295,14 +295,13 @@
                     <div class="social-info">
                         <a href="mailto:2017chb1052@iitrpr.ac.in?Subject=Regarding%20Advitiya" target="_top"><i
                                 class="zmdi zmdi-email"></i></a>
-                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                        <a href="tel:+919915405007"><i class="zmdi zmdi-phone"></i></a>
+                        <a href="https://www.linkedin.com/in/rahul-bharti-a95951153/"><i class="zmdi zmdi-linkedin"></i></a>
                     </div>
 
                     <div class="speaker-info">
                         <h5>Rahul Bharti</h5>
-                        <p>Overall Coordinator</p>
+                        <p>Marketing Head</p>
                     </div>
                 </div>
             </div>
@@ -316,11 +315,10 @@
                     </div>
 
                     <div class="social-info">
-                        <a href="mailto:2017eeb1131@iitrpr.ac.in?Subject=Regarding%20Advitiya" target="_top"><i
+                        <a href="mailto:gs.tech@iitrpr.ac.in?Subject=Regarding%20Advitiya" target="_top"><i
                                 class="zmdi zmdi-email"></i></a>
-                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                        <a href="tel:+918619174962"><i class="zmdi zmdi-phone"></i></a>
+                        <a href="https://www.linkedin.com/in/ashish-bedi-940abb193/"><i class="zmdi zmdi-linkedin"></i></a>
                     </div>
 
                     <div class="speaker-info">
@@ -341,9 +339,8 @@
                     <div class="social-info">
                         <a href="mailto:2017meb1183@iitrpr.ac.in?Subject=Regarding%20Events%20at%20Advitiya"
                             target="_top"><i class="zmdi zmdi-email"></i></a>
-                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                        <a href="tel:+918001481473"><i class="zmdi zmdi-phone"></i></a>
+                        <a href="https://www.linkedin.com/in/abhinash-barnwal-74bb9a179/"><i class="zmdi zmdi-linkedin"></i></a>
                     </div>
 
                     <div class="speaker-info">
@@ -364,14 +361,13 @@
                     <div class="social-info">
                         <a href="mailto:2017eeb1169@iitrpr.ac.in?Subject=Regarding%20Events%20at%20Advitiya"
                             target="_top"><i class="zmdi zmdi-email"></i></a>
-                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                        <a href="tel:+919501687763"><i class="zmdi zmdi-phone"></i></a>
+                        <a href="https://www.linkedin.com/in/shubhendragautam0069/"><i class="zmdi zmdi-linkedin"></i></a>
                     </div>
 
                     <div class="speaker-info">
                         <h5>Shubhendra Gautam</h5>
-                        <p>Events Head</p>
+                        <p>Startup Conclave Head</p>
                     </div>
                 </div>
             </div>
@@ -387,9 +383,8 @@
                     <div class="social-info">
                         <a href="mailto:2017chb1045@iitrpr.ac.in?Subject=Regarding%20Advitiya" target="_top"><i
                                 class="zmdi zmdi-email"></i></a>
-                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                        <a href="tel:+919690911442"><i class="zmdi zmdi-phone"></i></a>
+                        <a href="https://www.linkedin.com/in/kanishk-kumar-sanjay-269947153/"><i class="zmdi zmdi-linkedin"></i></a>
                     </div>
 
                     <div class="speaker-info">
@@ -410,9 +405,8 @@
                     <div class="social-info">
                         <a href="mailto:2017meb1246@iitrpr.ac.in?Subject=Regarding%20Advitiya" target="_top"><i
                                 class="zmdi zmdi-email"></i></a>
-                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                        <a href="tel:+918837896465"><i class="zmdi zmdi-phone"></i></a>
+                        <a href="https://www.linkedin.com/in/ujjwal-goel-371a04165/"><i class="zmdi zmdi-linkedin"></i></a>
                     </div>
 
                     <div class="speaker-info">
@@ -433,9 +427,8 @@
                     <div class="social-info">
                         <a href="mailto:2017eeb1121@iitrpr.ac.in?Subject=Hospitality%20at%20Advitiya" target="_top"><i
                                 class="zmdi zmdi-email"></i></a>
-                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                        <a href="tel:+918708725393"><i class="zmdi zmdi-phone"></i></a>
+                        <a href="https://www.facebook.com/abhi.balhara.18"><i class="zmdi zmdi-facebook"></i></a>
                     </div>
 
                     <div class="speaker-info">
@@ -456,9 +449,8 @@
                     <div class="social-info">
                         <a href="mailto:2017ceb1002@iitrpr.ac.in?Subject=Regarding%20Techno%20School%20Program%20at%Advitiya"
                             target="_top"><i class="zmdi zmdi-email"></i></a>
-                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                        <a href="tel:+918949852311"><i class="zmdi zmdi-phone"></i></a>
+                        <a href="https://www.linkedin.com/in/akash-jangid-5487b3172/"><i class="zmdi zmdi-linkedin"></i></a>
                     </div>
 
                     <div class="speaker-info">
@@ -479,9 +471,8 @@
                     <div class="social-info">
                         <a href="mailto:2017csb1119@iitrpr.ac.in?Subject=Regarding%20Special%20Lectures%20at%20Advitiya"
                             target="_top"><i class="zmdi zmdi-email"></i></a>
-                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                        <a href="tel:+919878795299"><i class="zmdi zmdi-phone"></i></a>
+                        <a href="https://www.linkedin.com/in/vineet-madan-8015bb58/d"><i class="zmdi zmdi-linkedin"></i></a>
                     </div>
 
                     <div class="speaker-info">
@@ -501,9 +492,8 @@
                     <div class="social-info">
                         <a href="mailto:2017csb1064@iitrpr.ac.in?Subject=Regarding%20Advitiya%20Website"
                             target="_top"><i class="zmdi zmdi-email"></i></a>
-                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                        <a href="tel:+917355404764"><i class="zmdi zmdi-phone"></i></a>
+                        <a href="https://www.linkedin.com/in/adarsh-kumar-a6563a167/"><i class="zmdi zmdi-linkedin"></i></a>
                     </div>
 
                     <div class="speaker-info">
@@ -523,9 +513,8 @@
                     <div class="social-info">
                         <a href="mailto:2017csb1073@iitrpr.ac.in?Subject=Regarding%20Advitiya%20Website"
                             target="_top"><i class="zmdi zmdi-email"></i></a>
-                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                        <a href="tel:+918896740277"><i class="zmdi zmdi-phone"></i></a>
+                        <a href="https://www.linkedin.com/in/dilip-sharma-6066aa168/"><i class="zmdi zmdi-linkedin"></i></a>
                     </div>
 
                     <div class="speaker-info">
@@ -545,9 +534,9 @@
                     <div class="social-info">
                         <a href="mailto:2017csb1087@iitrpr.ac.in?Subject=Regarding%20Advitiya" target="_top"><i
                                 class="zmdi zmdi-email"></i></a>
-                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                        <a href="tel:+917032670785"><i class="zmdi zmdi-phone"></i></a>
+                        <a href="https://www.facebook.com/sneakkiller?fref=search&__tn__=%2Cd%2CP-R&eid=ARDPbvVSESo4-tRFzFrF9INNnd_CKGK5Sn98KHUx_Lzzx8GO3tydjxwRe05Nt14rLBg7hPdPA0ToFEeO">
+                            <i class="zmdi zmdi-facebook"></i></a>
                     </div>
 
                     <div class="speaker-info">
@@ -567,9 +556,8 @@
                     <div class="social-info">
                         <a href="mailto:2017eeb1150@iitrpr.ac.in?Subject=Regarding%20Decoration%20at%20Advitiya"
                             target="_top"><i class="zmdi zmdi-email"></i></a>
-                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                        <a href="tel:+919079350330"><i class="zmdi zmdi-phone"></i></a>
+                        <a href="https://www.linkedin.com/in/mayank-raj-8b9b3717b/"><i class="zmdi zmdi-linkedin"></i></a>
                     </div>
 
                     <div class="speaker-info">
@@ -589,9 +577,8 @@
                     <div class="social-info">
                         <a href="mailto:2017ceb1007@iitrpr.ac.in?Subject=Regarding%20Entertainment%20Nights%at%20Advitiya"
                             target="_top"><i class="zmdi zmdi-email"></i></a>
-                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                        <a href="tel:+918427012721"><i class="zmdi zmdi-phone"></i></a>
+                        <a href="https://www.linkedin.com/in/hardik-goyal-276818152/"><i class="zmdi zmdi-linkedin"></i></a>
                     </div>
 
                     <div class="speaker-info">
@@ -611,9 +598,8 @@
                     <div class="social-info">
                         <a href="mailto:2017meb1247@iitrpr.ac.in?Subject=Regarding%20Advitiya" target="_top"><i
                                 class="zmdi zmdi-email"></i></a>
-                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                        <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                        <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                        <a href="tel:+919082273763"><i class="zmdi zmdi-phone"></i></a>
+                        <a href="https://www.linkedin.com/in/vedant-paithane-044812153/"><i class="zmdi zmdi-linkedin"></i></a>
                     </div>
 
                     <div class="speaker-info">
