--- a/main_page/templates/main_page/talks.html
+++ b/main_page/templates/main_page/talks.html
@@ -14,21 +14,22 @@
             <div id="carouselOne" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselOne" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselOne" data-slide-to="1"></li>
-                    <li data-target="#carouselOne" data-slide-to="2"></li>
+                    {% for person in people %}
+                    <li data-target="#carouselOne" data-slide-to="{{ forloop.counter }}"></li>
+                    {% endfor %}
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item bg_cover active"
-                        style="background-image: url(../../static/main_page/img/bg-img/college_bg.jpg)">
+                        style="background-image: url({% static 'main_page/img/bg-img/college_bg.jpg' %})">
                         <div class="carousel-caption">
                             <div class="container">
                                 <div class="row justify-content-center">
                                     <div class="col-xl-6 col-lg-7 col-sm-10">
                                         <h2 class="carousel-title">Refreshing Design & Easy to Customize</h2>
-                                        <a href="{% url 'main_page:events'%}" class="btn confer-btn-white">Explore</a>
+                                        <!-- <a href="{% url 'main_page:events'%}" class="btn confer-btn-white">Explore</a>
                                         <ul class="carousel-btn rounded-buttons">
 
-                                        </ul>
+                                        </ul> -->
                                     </div>
                                 </div> <!-- row -->
                             </div> <!-- container -->
@@ -53,7 +54,7 @@
                     <div class="carousel-item">
                         <div class="row h-100">
                             <div class="col-md-6 h-md-50" style="overflow: hidden;">
-                                <img src="{% static 'main_page/img/HarinderSikka8.jpg' %}" style="width: 100%;">
+                                <img src="{{ person.image.url }}" style="width: 100%;">
                             </div>
                             <div class="col-md-6 h-md-50" style="padding: 20px;">
                                 <div class="row justify-content-center d-table h-50">
