Dehradun Remove Hardcoded Center

--- a/techconnect/templates/techconnect/centers.html
+++ b/techconnect/templates/techconnect/centers.html
@@ -52,7 +52,7 @@
                 </a>
             </div>
         </div>
-        <div class="column">
+        <!-- <div class="column">
             <h4>Dehradun</h4>
             <div class="module mid">
                 <h2>Registration Opening Shortly</h2>
@@ -60,7 +60,7 @@
                     <img src="{% static 'techconnect/img/dehradun.jpg' %}" />
                 </a>
             </div>
-        </div>
+        </div> -->
         <div class="column">
             <h4>Other Centers</h4>
             <div class="module mid">
