--- a/techconnect/templates/techconnect/college.html
+++ b/techconnect/templates/techconnect/college.html
@@ -16,13 +16,13 @@
                         </div>
 
                         <!-- Post Title -->
-                        <h3>Workshops at {{center.college_name}}, {{center.city_name}}, {{center.state}}</h3><br>
+                        <h3>Venue: {{center.college_name}}, {{center.city_name}}, {{center.state}}</h3><br>
                         {% for workshop in workshops %}
                             <ul>
                                 <li><h4 style="color:#2e19a0">{{workshop.workshop_name}}</h4></li>
                                 <div class="container">
                                     <li><h5 >Fee: {{workshop.fees}}</h5></li>
-                                    <li><h5 >Dates: To be announced soon</h5></li>
+                                    <li><h5 >Dates: 21st & 22nd March</h5></li>
                                     <a href="{{workshop.rulebook}}" class="btn confer-btn-white"
                                         style="border: 2px solid rgb(43, 2, 143); color: black;"
                                         onmouseover="this.style.color='#ffffff'" onmouseout="this.style.color='#000000'">
