Register button at center

--- a/techconnect/templates/techconnect/base.html
+++ b/techconnect/templates/techconnect/base.html
@@ -80,7 +80,7 @@
                                     <li><a href="{% url 'main_page:index' %}">Home</a></li>
                                     <li><a href="{% url 'techconnect:about' %}">About</a></li>
                                     <li><a href="{% url 'techconnect:contact' %}">Contacts</a></li>
-                                    <li><a href="{% url 'techconnect:centers' %}">Cities</a></li>
+                                    <li><a href="{% url 'techconnect:centers' %}">Register/Cities</a></li>
                                     <li><a href="https://internship.advitiya.in">Internship and Benefits</a></li>
                                 </ul>
                             </div>
