--- a/techconnect/templates/techconnect/index.html
+++ b/techconnect/templates/techconnect/index.html
@@ -16,6 +16,13 @@
                         <div class="hero-slides-content">
                             <!-- <h4 data-animation="fadeInUp" data-delay="100ms">All the courses you need</h4> -->
                             <h2 data-animation="fadeInUp" data-delay="200ms">TechConnect</h2>
+                            <div class="breadcumb-area bg-img" style= "height: 50px;">
+                                <div class="bradcumbContent">
+                                    <a href = "{% url 'techconnect:centers'%}">
+                                        <h2>Register</h2>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
