--- a/main_page/templates/main_page/talks.html
+++ b/main_page/templates/main_page/talks.html
@@ -15,7 +15,9 @@
                 <ol class="carousel-indicators">
                     <li data-target="#carouselOne" data-slide-to="0" class="active"></li>
                     {% for person in people %}
-                    <li data-target="#carouselOne" data-slide-to="{{ forloop.counter }}"></li>
+                        {% if person.show %}
+                            <li data-target="#carouselOne" data-slide-to="{{ forloop.counter }}"></li>
+                        {% endif %}
                     {% endfor %}
                 </ol>
                 <div class="carousel-inner">
@@ -52,6 +54,7 @@
                         </div>
                     </div> -->
                     {% for person in people %}
+                    {% if person.show %}
                     <div class="carousel-item" style="height: auto;">
                         <div class="row h-100">
                             <div class="col-md-6 h-md-50" style="overflow: hidden; max-height: 767px;">
@@ -80,6 +83,7 @@
                             </div>
                         </div>
                     </div>
+                    {% endif %}
                     {% endfor %}
                 </div> <!-- carousel-inner -->
 
