--- a/main_page/templates/main_page/sponsors.html
+++ b/main_page/templates/main_page/sponsors.html
@@ -81,7 +81,59 @@
             </div> 
         </div>
     </section>
-
+    <section class="our-sponsor-client-area section-padding-100">
+        <div class="container">
+            <div class="row">
+                
+                <div class="col-12">
+                    <div class="section-heading-2 text-center wow fadeInUp" data-wow-delay="300ms">
+                        <br>
+                        <p>Partners &amp; Sponsors</p>
+                        <h4>CURRENT SPONSOR</h4>
+                    </div>
+                </div>
+            </div>
+    
+             <div class="row">
+                <div class="col-12">
+                    
+                    <div class="our-sponsor-area d-flex flex-wrap">
+                    
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/youth.png' %}" alt=""></a>
+                        </div>
+                    
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/download.png' %}" alt=""></a>
+                        </div>
+                    
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/feevin.jpg' %}" alt=""></a>
+                        </div>
+                        
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/faadoo.png' %}" alt=""></a>
+                        </div>
+        
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/know.png' %}" alt=""></a>
+                        </div>
+        
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/duex.png' %}" alt=""></a>
+                        </div>
+                        
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/chand.png' %}" alt=""></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/dunia.png' %}" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+        </div>
+    </section>
 
 
 {%endblock%}
