--- a/accomodation/templates/accommodation/accommodation.html
+++ b/accomodation/templates/accommodation/accommodation.html
@@ -41,7 +41,7 @@
 
             <div class="col-12 col-md-6 col-lg-6">
                     <div class="ticket-pricing-table-details">
-                        <p style="font-size: 1.5em;"><i class="zmdi zmdi-check"></i> Luxorios Three Nights Stay.</p>
+                        <p style="font-size: 1.5em;"><i class="zmdi zmdi-check"></i> Luxurios Three Nights Stay.</p>
                         <p style="font-size: 1.5em;"><i class="zmdi zmdi-check"></i> Mattress, Pillow and Blanket (if needed, 
                             as per the weather) provided.</p>
                         <p style="font-size: 1.5em;"><i class="zmdi zmdi-check"></i> Free High Speed Internet.</p>
