Accommodation link on events page

--- a/main_page/templates/main_page/events.html
+++ b/main_page/templates/main_page/events.html
@@ -14,8 +14,13 @@
                 <div class="about-content-text" style="color: white;">
                     <h3>Important Note</h3>
                     <ul>
-                        The registration fee for the events is Rs. 400 per participant. After paying this nominal
-                        fee, one can participate in any no. of events.
+                        The registration fee for the events is Rs.400 per participant. After paying this nominal
+                        fee, one can participate in any no. of events.<br><br>
+                        You may want to get accommodation during the days of ADVITIYA. Book your accommodation before 
+                        all the rooms are filled, and we close the accommodation portal.
+                        <br><br>
+                        <center><a href="{% url 'accomodation:index'%}"
+                            class="btn confer-btn-white">Get Accommodation</a></center>
                     </ul>
                     <br>
                     <h3>Event Registration Process</h3>
