--- a/main_page/templates/main_page/workshop.html
+++ b/main_page/templates/main_page/workshop.html
@@ -27,7 +27,7 @@ background: linear-gradient(to right, #fbc7d4, #9796f0); /* W3C, IE 10+/ Edge, F
                                 </li>
                                 <li style="list-style-type:disc; text-align: left;">
                                     Step 2: [Optional] Get accomodation. <a
-                                        href="{% url 'main_page:workshop_accomodation' %}" style="color: blue;">(Click
+                                        href="{% url 'main_page:workshop_accomodation_curr' %}" style="color: blue;">(Click
                                         Here)</a>
                                 </li>
                             </ul>
